sandbox/output
StrategyFactory.java:16: error: cannot find symbol
           return new StrategyConjured();  
                      ^
  symbol:   class StrategyConjured
  location: class StrategyFactory
1 error
